fixed blurry images

--- a/frontend/src/components/ShowSpots/ShowSpots.css
+++ b/frontend/src/components/ShowSpots/ShowSpots.css
@@ -73,7 +73,18 @@
     width: 100%;
     aspect-ratio: 1/1;
     border: 2px black solid;
+    object-fit: cover;
+    object-position: center;
 }
+.img-container {
+    width: 100%;
+    height: 0;
+    padding-bottom: 75%;
+    position: relative;
+    overflow: hidden;
+}
+
+
 
 
 .location-rating {
